[gd_scene load_steps=2 format=3 uid="uid://t83sdh3v3ibq"]

[ext_resource type="Script" uid="uid://uw3cyanb4dw2" path="res://Script/LojaDePresentes/Presente/PresenteGeradorCena/presente_gerador_cena.gd" id="1_ioky2"]

[node name="PresenteGeradorCena" type="HBoxContainer"]
tooltip_text = "Teste do tooltip"
script = ExtResource("1_ioky2")

[node name="Sprite" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
expand_mode = 5
stretch_mode = 5

[node name="Mais" type="Button" parent="."]
layout_mode = 2
text = "+"

[node name="GeracaoPresente" type="Timer" parent="."]
wait_time = 5.0

[connection signal="pressed" from="Mais" to="." method="_on_mais_pressed"]
[connection signal="timeout" from="GeracaoPresente" to="." method="_on_geracao_presente_timeout"]
